<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.intino.ness</groupId>
	<artifactId>data-hub-terminal-plugin</artifactId>
	<name>data-hub-terminal-plugin</name>
	<version>2.12.10</version>
	<packaging>jar</packaging>
	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sonar.language>java</sonar.language>
		<sonar.login></sonar.login>
		<sonar.password></sonar.password>
	</properties>

	<build>
		<testSourceDirectory>test</testSourceDirectory>
		<outputDirectory>../out/production/datahubterminalplugin</outputDirectory>
		<testOutputDirectory>../out/test/datahubterminalplugin</testOutputDirectory>
		<directory>../out/build/data-hub-terminal-plugin</directory>
		<resources>
			<resource><directory>../out/production/datalake-inspector</directory></resource>
		</resources>
		<testResources>
			<testResource><directory>test-res</directory></testResource>
		</testResources>
		<plugins>
		    <plugin>
                  <artifactId>maven-clean-plugin</artifactId>
                  <version>3.0.0</version>
                  <configuration>
                    <skip>true</skip>
                  </configuration>
                </plugin>
		     <plugin>
		                    <groupId>org.apache.maven.plugins</groupId>
		                    <artifactId>maven-compiler-plugin</artifactId>
		                    <version>3.8.0</version>
		                    <executions>
		                        <execution>
		                            <id>default-compile</id>
		                            <phase>compile</phase>
		                            <goals>
		                                <goal>compile</goal>
		                            </goals>
		                            <configuration>
		                                <skipMain>true</skipMain>
		                            </configuration>
		                        </execution>
		                    </executions>
		                </plugin><plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addClasspath>true</addClasspath>
							<classpathPrefix>dependency/</classpathPrefix>
						</manifest>
						<manifestSections>
                        </manifestSections>
					</archive>
				</configuration>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-dependency-plugin</artifactId>
			    <version>2.10</version>
			    <executions>
			        <execution>
			            <id>copy-dependencies</id>
			            <phase>package</phase>
			            <goals>
			                <goal>copy-dependencies</goal>
			            </goals>
			            <configuration>
			                <useBaseVersion>false</useBaseVersion>
			                <includeScope>runtime</includeScope>
			                <overWriteReleases>false</overWriteReleases>
			                <overWriteSnapshots>false</overWriteSnapshots>
			                <overWriteIfNewer>true</overWriteIfNewer>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.9.1</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src</source>

							</sources>
						</configuration>
					</execution>
					<execution>
						<id>add-test-source</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>add-test-source</goal>
						</goals>
						<configuration>
							<sources>
							    <source>test</source>
								<source>test-gen</source>

							</sources>
						</configuration>
						</execution>
				</executions>
			</plugin>
			 <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


	<repositories>
		<repository>
			<id>intino-maven</id>
			<url>https://artifactory.intino.io/artifactory/releases</url>
			<snapshots><enabled>false</enabled></snapshots>
		</repository>
		<repository>
			<id>intino-maven-snapshot</id>
			<url>https://artifactory.intino.io/artifactory/snapshots</url>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>intino-maven</id>
			<name>intino-maven</name>
			<url>https://artifactory.intino.io/artifactory/release-libraries</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>io.intino</groupId>
			<artifactId>data-hub</artifactId>
			<scope>compile</scope>
			<version>5.4.0</version>
		    <exclusions>
		    	    <exclusion>
		    	        <groupId>io.intino.alexandria</groupId>
		    	        <artifactId>exceptions</artifactId>
		    	    </exclusion>
		    	    <exclusion>
		    	        <groupId>io.intino.alexandria</groupId>
		    	        <artifactId>jms</artifactId>
		    	    </exclusion>
		    	    <exclusion>
		    	        <groupId>io.intino.alexandria</groupId>
		    	        <artifactId>jmx</artifactId>
		    	    </exclusion>
		    	    <exclusion>
		    	        <groupId>io.intino.alexandria</groupId>
		    	        <artifactId>ingestion</artifactId>
		    	    </exclusion>
		    	    <exclusion>
		    	        <groupId>io.intino.alexandria</groupId>
		    	        <artifactId>sealing</artifactId>
		    	    </exclusion>
		    	    <exclusion>
		    	        <groupId>io.intino.alexandria</groupId>
		    	        <artifactId>ui-framework</artifactId>
		    	    </exclusion>
		    	    <exclusion>
		    	        <groupId>org.apache.activemq</groupId>
		    	        <artifactId>activemq-broker</artifactId>
		    	    </exclusion>
		    	    <exclusion>
		    	        <groupId>org.apache.activemq</groupId>
		    	        <artifactId>activemq-mqtt</artifactId>
		    	    </exclusion>
		    	    <exclusion>
		    	        <groupId>org.apache.activemq</groupId>
		    	        <artifactId>activemq-kahadb-store</artifactId>
		    	    </exclusion>
		    	    <exclusion>
		    	        <groupId>org.apache.activemq</groupId>
		    	        <artifactId>activemq-jaas</artifactId>
		    	    </exclusion>
		    	    <exclusion>
		    	        <groupId>org.apache.activemq</groupId>
		    	        <artifactId>activemq-runtime-config</artifactId>
		    	    </exclusion>
		    	    <exclusion>
		    	        <groupId>io.intino</groupId>
		    	        <artifactId>datalake-inspector</artifactId>
		    	    </exclusion>
		        </exclusions>
		</dependency>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>json</artifactId>
			<scope>compile</scope>
			<version>1.0.2</version>
		</dependency>
		<dependency>
			<groupId>io.intino.magritte</groupId>
			<artifactId>framework</artifactId>
			<scope>compile</scope>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>logger</artifactId>
			<scope>compile</scope>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino</groupId>
			<artifactId>plugin-interface</artifactId>
			<scope>compile</scope>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>io.intino.itrules</groupId>
			<artifactId>engine</artifactId>
			<scope>compile</scope>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.shared</groupId>
			<artifactId>maven-invoker</artifactId>
			<scope>compile</scope>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>io.intino.legio</groupId>
			<artifactId>model</artifactId>
			<scope>test</scope>
			<version>3.2.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>bpm-framework</artifactId>
			<scope>test</scope>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
			<version>4.13</version>
		</dependency>
	</dependencies>
</project>